Chatbot: best_time/general tra DB tour, card actions Lịch trình/Địa điểm/Giá, xử lý payload từ DB
Made-with: Cursor